--- a/src/WeatherBox.css
+++ b/src/WeatherBox.css
@@ -2,26 +2,50 @@
 	font-family: 'Dosis', 'Oxygen', sans-serif;
 }
 
-.weather-tags {
+.weather-card {
 	margin: 1em 4em 1em 4em;
+	padding: 1em 1em 1em 1em;
 	background-color: #d9f3f9;
 	border-radius: 1em;
 	display: grid;
-	justify-items: start;
+/*	grid-gap: 10px;
+*/		grid-template-columns: 1fr 1fr 1fr;
 }
 
-#weather-location {
-	font-size: 2em;
+	#weather-location {
+		grid-column: 1 / 3;
+		grid-row: 1;
+		margin-top: 0.5em;
+		margin-left: -1em;
+		margin-right: 1em;
+		/*border-style: solid;*/
+	}
+		#weather-city {
+			font-size: 1.5em;
+		}
+/*		#weather-zipcode {
+			font-size: 1em;
+		}*/
 
-	/*grid-column-start: 2;
-	grid-column-end: five;
-	grid-row-start: row1-end;
-	grid-row-end: 3;*/
-}
+	#weather-icon {
+		grid-column: 3;
+		grid-row: 1;
+	}
+	
+	#icon {
+		width: 50px;
+	}
 
-#weather-status {
-}
+	#weather-status {
+		grid-column: 1/3;
+		margin-left: -1em;
+		margin-right: 1em;
+		/*border-style: solid;*/
+	}
 
-#weather-f {
-	font-size: 2em;
-}
+	#weather-f {
+		grid-column: 3;
+		/*border-style: solid;*/
+		font-size: 2em;
+	}
+
