--- a/src/WeatherBox.css
+++ b/src/WeatherBox.css
@@ -5,7 +5,7 @@
 .weather-card {
 	margin: 1em 4em 1em 4em;
 	padding: 1em 1em 1em 1em;
-	max-width: 500px;
+	max-width: 50%;
 	background-color: #b2ebf2;
 	border-radius: 1em;
 	display: grid;
