--- a/src/WeatherBox.css
+++ b/src/WeatherBox.css
@@ -3,9 +3,13 @@
 }
 
 .weather-card {
-	margin: 1em 4em 1em 4em;
+	/*margin: 1em 4em 1em 4em;*/
 	padding: 1em 1em 1em 1em;
-	max-width: 50%;
+	max-width: 55%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 1.5em;
+	margin-bottom: 1.5em;
 	background-color: #b2ebf2;
 	border-radius: 1em;
 	display: grid;
